--- a/html1/resources/style.css
+++ b/html1/resources/style.css
@@ -1,14 +1,26 @@
+* {
+    font-family: "Lucida Handwriting", Helvetica, sans-serifs;
+}
+
+body {
+    background-color: antiquewhite;
+    margin: 0;
+    padding: 0;
+}
+
 header {
-    background-color: rgb(32, 133, 222); 
-    position: sticky; 
-    top: 0; 
-    display: flex; 
-    flex-direction: row; 
+    height: 50px;
+    background-color: rgb(32, 133, 222);
+    position: sticky;
+    top: 0;
+    display: flex;
+    flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 header a {
-    color:aliceblue;
+    color: aliceblue;
 }
 
 table {
@@ -17,8 +29,37 @@ table {
 
 table, th, td {
     border: 1px solid black;
-  }
+}
 
 .viss-ekrans {
     width: 100%;
+}
+
+.d-flex-f-d-row {
+    display: flex;
+    flex-direction: row;
+    margin: 30px;
+}
+
+.d-flex-f-d-row h1, p {
+    padding: 20px;
+}
+
+.d-flex-f-d-row-reverse {
+    display: flex;
+    flex-direction: row-reverse;
+    margin: 30px;
+}
+
+.d-flex-f-d-row-reverse h1, p {
+    padding: 20px;
+}
+
+.w-50 {
+    width: 50%;
+}
+
+footer {
+    background-color: rgb(32, 133, 222);
+    text-align: center;
 }
